--- a/src/Components/Live Classes/LiveClasses.module.css
+++ b/src/Components/Live Classes/LiveClasses.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 40vh;
   min-height: 200px;
-  background-color: rgb(113, 170, 216);
+  background-color: #89add3;
   margin: auto;
   margin-top: 4rem;
   position: relative;
@@ -26,9 +26,27 @@
 .plageHeader_p {
   font-family: 'Montserrat-Regular';
 }
+
 .feature_icon {
   width: 20%;
   margin: 10px;
+}
+
+.cardHeading {
+  font-family: 'Montserrat-Medium';
+  font-size: 14px;
+}
+
+.alphaColor {
+  color: #23b0bb;
+}
+
+.cardText {
+  font-family: 'Montserrat-Regular';
+  font-size: 12px;
+}
+
+.cardImage {
 }
 
 @media screen and (max-width: 700px) {
