--- a/src/Components/Live Classes/LiveClasses.scss
+++ b/src/Components/Live Classes/LiveClasses.scss
@@ -285,6 +285,19 @@
   border-bottom: transparent;
 }
 
+.borderedSelectors {
+  width: 100%;
+  padding: 10px;
+  font-family: 'Montserrat-Regular';
+  border-radius: 5px;
+  border: 1px solid rgba(48, 47, 47, 0.212);
+}
+
+.selectedMethod {
+  background-color: var(--primary-blue);
+  color: white;
+}
+
 @media screen and (max-width: 700px) {
   .scheduleCard {
     width: 95%;
