--- a/src/Components/Tests/Tests.scss
+++ b/src/Components/Tests/Tests.scss
@@ -20,6 +20,46 @@
     border-radius: 10px;
   }
 
+  &__headingContainer {
+    font-family: $medium;
+    color: black;
+    display: 'flex';
+    flex-direction: column;
+    padding-left: 20px;
+    width: 96%;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+    }
+  }
+
+  &__viewAllButtonForCards {
+    outline: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    background-color: transparent;
+    border: none;
+    font-size: 12px;
+    font-family: $medium;
+    margin: 20px 0px;
+  }
+
+  &__initialHeading {
+    position: relative;
+    top: 50%;
+    color: $headingGrey;
+    font-family: $bold;
+    margin: 20px 0px;
+  }
+
+  &__smallTextUnderHeading {
+    font-size: 12px;
+    font-family: 'Montserrat-Regular';
+    width: 60%;
+    margin-bottom: 18px;
+  }
+
   &__scrollableCardHeading {
     font-size: $spacer * 0.875;
     color: $headingGrey;
