commit after adding scrollupbar in btm Nav

--- a/src/Components/Study Bin/StudyBin.scss
+++ b/src/Components/Study Bin/StudyBin.scss
@@ -57,6 +57,7 @@
 }
 .container_studybin {
   justify-content: space-evenly;
+  margin-bottom: 3.5rem;
 }
 .container_studybin::after {
   content: '';
