--- a/src/Components/Common/AddButton/AddButton.scss
+++ b/src/Components/Common/AddButton/AddButton.scss
@@ -4,7 +4,7 @@
   &__wrap {
     position: fixed;
     right: 0;
-    bottom: 0;
+    bottom: 50px;
   }
 
   // &__wrap div {
@@ -87,5 +87,11 @@
     right: 10%;
     z-index: 999;
     color: white;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .AddButton__wrap {
+    bottom: 48px;
   }
 }
