--- a/src/Components/Common/BottomNavigation/BottomNavigation.scss
+++ b/src/Components/Common/BottomNavigation/BottomNavigation.scss
@@ -7,7 +7,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 10000;
   justify-content: space-around;
   align-items: center;
   height: 50px;
@@ -34,8 +34,77 @@
   color: #009ece !important;
 }
 
+.bottomScrollBar {
+  width: 100vw;
+  height: 70vh;
+  // display: flex;
+  text-align: center;
+  padding: 10px;
+  overflow: auto;
+  position: fixed;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px -4px 8px #1f00750f;
+  bottom: -80vh;
+  z-index: 1000;
+  transition-duration: 0.8s;
+  // transform: translate(0px, -100vh);
+}
+
+.bottomScrollBar::-webkit-scrollbar {
+  display: none;
+}
+
+.scrolledUp {
+  bottom: 0px !important;
+}
+
+.backDrop {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(128, 128, 128, 0.2);
+  z-index: 1000;
+}
+
+.horizontalLine {
+  width: 70px;
+  height: 5px;
+  border-radius: 3px;
+  margin: auto;
+  margin-bottom: 20px;
+  background-color: #00000061;
+}
+
+.squaresC {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  flex-flow: wrap;
+  margin-bottom: 3rem;
+  width: 100%;
+}
+
+.square {
+  margin: 9px 9px !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Montserrat-Regular';
+  width: 28%;
+  background-color: #009ece12;
+  height: 150px;
+  border-radius: 10px;
+}
+
 @media screen and (max-width: 600px) {
   .bottomNavItems {
     padding: 6px 9px;
+  }
+  .square {
+    height: 100px;
+    font-size: 11px;
   }
 }
