--- a/src/Components/Common/BottomNavigation/BottomNavigation.scss
+++ b/src/Components/Common/BottomNavigation/BottomNavigation.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  background-color: #efefef;
+  background-color: #fff;
   box-shadow: 0px -4px 8px #1f00750f;
   position: fixed;
   bottom: 0;
@@ -10,7 +10,7 @@
   z-index: 10000;
   justify-content: space-around;
   align-items: center;
-  height: 50px;
+  height: 60px;
   color: #0000008a;
 }
 .bottomNavItems {
@@ -90,7 +90,8 @@
 .square {
   margin: 9px 9px !important;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: end;
   align-items: center;
   font-family: 'Montserrat-Regular';
   width: 28%;
@@ -105,6 +106,15 @@
   background-color: #0193c028;
 }
 
+.BNImage {
+  width: 20%;
+  max-height: 85px;
+}
+
+.textFeatureNameBN {
+  margin-top: 15px;
+}
+
 @media screen and (max-width: 600px) {
   .bottomNavItems {
     padding: 6px 9px;
@@ -112,5 +122,8 @@
   .square {
     height: 100px;
     font-size: 11px;
+  }
+  .BNImage {
+    width: 27%;
   }
 }
