--- a/src/Components/HomeWorkCreator/HomeWorkCreator.scss
+++ b/src/Components/HomeWorkCreator/HomeWorkCreator.scss
@@ -36,6 +36,7 @@
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
     position: relative;
     min-width: 33%;
+    transition-duration: 0.3s;
   }
 
   &__smallHeading {
@@ -434,6 +435,21 @@
   padding-left: 0px;
 }
 
+.leftRighticons {
+  border-radius: 100px;
+  width: 23px;
+  height: 23px;
+  background-color: var(--lighter-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.leftRighticons svg {
+  color: white;
+  width: 20px;
+}
+
 .createNewModalInputs {
   width: 90%;
   margin: 5px auto;
@@ -460,4 +476,15 @@
 
 .addBtnHW:disabled {
   background-color: gray;
+}
+
+.compressed {
+  // max-width: 10% !important;
+  min-width: 4% !important;
+  transition-duration: 0.3s;
+}
+
+.expanded {
+  min-width: 48% !important;
+  transition-duration: 0.3s;
 }
