--- a/src/Components/Login/DummyDashboard.scss
+++ b/src/Components/Login/DummyDashboard.scss
@@ -21,6 +21,9 @@
     @include media-breakpoint-up(sm) {
       font-size: $spacer * 1.25;
     }
+    @include media-breakpoint-up(md) {
+      margin-top: 25px;
+    }
   }
 
   &__aboutus {
