--- a/src/Components/Tests/Tests.scss
+++ b/src/Components/Tests/Tests.scss
@@ -83,3 +83,21 @@
     font-size: $spacer * 0.875;
   }
 }
+
+.OnlineTestHeadingContainer {
+  width: 95%;
+  margin: auto;
+}
+
+.Tests__scrollableCard {
+  padding-left: 3% !important;
+}
+
+@media screen and (max-width: 600px) {
+  .OnlineTestHeadingContainer {
+    width: 100%;
+  }
+  .Tests__scrollableCard {
+    padding-left: 0px !important;
+  }
+}
