--- a/src/Components/Dashboard/Dashboard.scss
+++ b/src/Components/Dashboard/Dashboard.scss
@@ -53,7 +53,11 @@
   &__innovation {
     background: #fff4ec;
     border-radius: 10px;
+    width: 93%;
 
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+    }
     // background: linear-gradient(90deg, #fcf9f8, #fff4ec);
   }
 
@@ -125,12 +129,12 @@
     border-radius: 10px;
     border-left: 30px solid var(--lighter-blue);
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
-    width: 87%;
+    width: 95%;
   }
 
   &__attendanceSubHeading {
     font-family: 'Montserrat-Regular';
-    line-height: 15px;
+    line-height: 12px;
     color: $dashboardBlack;
   }
 
@@ -139,11 +143,12 @@
     font-family: $semiBold;
     color: $dashboardBlack;
     line-height: 13px;
+    width: 95%;
   }
 
   &__noticeBoard {
     position: relative;
-    width: 85%;
+    width: 93%;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.16);
     border-radius: 10px;
 
@@ -194,6 +199,7 @@
   }
 
   &__noticeText {
+    // background-color: #fff4a4;
     background-color: var(--primary-blue);
     font-family: 'Montserrat-Medium';
     font-size: $spacer * 0.75;
@@ -207,10 +213,11 @@
     color: var(--primary-blue);
     font-size: $spacer * 1.5;
     font-family: $bold;
+    opacity: 0.5;
   }
   &_homeworkCreator {
     @include media-breakpoint-up(sm) {
-      margin-left: 6%;
+      margin-left: 1%;
     }
   }
 
@@ -235,6 +242,7 @@
 .HWscrollableCard {
   background: linear-gradient(103deg, #ffefeb, #feae96) !important;
   border: 0px !important;
+  margin-left: 0px !important;
 }
 .HWscrollableCard2 {
   background: linear-gradient(103deg, #f9efff, #705a7e) !important;
@@ -242,8 +250,8 @@
 }
 
 .react_chart {
-  width: 50%;
-  margin: auto;
+  display: flex;
+  width: 100%;
 }
 .noticeboard_img {
   text-align: right;
@@ -260,16 +268,18 @@
 }
 
 .admission_cards {
-  width: 85%;
+  width: 93%;
 }
 
 .admission_button {
   padding-right: 15px;
   padding-left: 15px;
+  background-color: white;
+  border: 1px solid #7070708a;
 }
 
 .Dashboard__attendanceSubHeading {
-  font-size: 15px;
+  font-size: 12px;
 }
 
 .floatingChatButtonDashboard {
@@ -304,6 +314,16 @@
   font-family: 'Montserrat-Regular';
   font-size: 12px;
   padding: 3px;
+}
+
+.admission_charts {
+  display: flex;
+  flex-direction: row;
+  overflow: auto;
+}
+
+.admission_charts::-webkit-scrollbar {
+  display: none;
 }
 
 @media screen and (max-width: 700px) {
@@ -353,6 +373,14 @@
   justify-content: center;
   text-align: center;
 }
+
+.admissionsSubHeading {
+  font-size: 12px;
+  font-family: 'Montserrat-Regular';
+  width: 88%;
+  margin-bottom: '18px';
+}
+
 .nameAndProfilePic {
   margin-left: 0px;
   margin-right: 0px;
@@ -363,6 +391,9 @@
 
 .fillAdmissionFormButton {
   width: 30%;
+  height: 40px !important;
+  font-size: 15px !important;
+  font-family: 'Montserrat-Regular';
 }
 
 .Dashboard_image {
@@ -370,9 +401,45 @@
   padding-right: 20px;
 }
 
+.scrollableCardHeading {
+  width: 93%;
+}
+
+.aboutConnectContainer {
+  width: 93%;
+  margin: auto;
+}
+
+.addUserBatchContainer {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.NumberOfUserContainer {
+  width: 45%;
+}
+
+.chartContainer {
+  width: 100% !important;
+  border-radius: 10px !important;
+  min-width: 260px !important;
+}
+
 @media screen and (max-width: 600px) {
   .fillAdmissionFormButton {
     width: 53%;
+  }
+  .chartContainer {
+    width: 95% !important;
+  }
+  .addUserBatchContainer {
+    justify-content: center;
+  }
+  .aboutConnectContainer {
+    width: 95%;
+  }
+  .scrollableCardHeading {
+    width: 95%;
   }
   .Dashboard_image {
     padding-right: 0px;
@@ -380,5 +447,14 @@
   }
   .Dashboard__headerCard {
     margin-bottom: 60px;
+  }
+  .admission_charts {
+    flex-direction: column;
+  }
+  .Dashboard__attendanceCard {
+    width: 85%;
+  }
+  .admissionsSubHeading {
+    width: 70%;
   }
 }
