--- a/src/Components/Login/DummyDashboard.scss
+++ b/src/Components/Login/DummyDashboard.scss
@@ -64,6 +64,29 @@
     font-size: $spacer * 0.75;
   }
 
+  &__contactDetails {
+    font-family: $medium;
+    line-height: 15px;
+    color: $dashboardBlack;
+    font-size: $spacer * 0.75;
+
+    @include media-breakpoint-up(md) {
+      font-size: 16px;
+    }
+  }
+
+  &__contactSmall {
+    font-family: $regular;
+    line-height: 13px;
+    color: $dashboardBlack;
+    font-size: $spacer * 0.625;
+
+    @include media-breakpoint-up(md) {
+      font-size: 12px;
+      margin-top: 5px;
+    }
+  }
+
   &__joinSmall {
     font-family: $regular;
     line-height: 13px;
