--- a/src/Components/Tests/styles.css
+++ b/src/Components/Tests/styles.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  margin: 2px;
+  /* margin: 2px; */
 }
 .divContainer {
   width: 100%;
@@ -8,12 +8,21 @@
   display: table;
 }
 .tabs {
-  margin-top: 65px;
+  margin-top: 70px;
+  display: flex;
   align-items: center;
-  width: 1115px;
-  /* background-color: blueviolet; */
+  justify-content: center;
+  /* border: 2px solid red; */
 }
-.tab {
-  /* background-color: blueviolet; */
-  /* margin: 10px 10px; */
+.nav-item {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.noMatch {
+  margin: 10px 5px;
+}
+.livetestImg {
+  margin-bottom: 10px;
 }
