video player quality added plus dynamic card new

--- a/src/Components/Common/LoginDetailsSkeleton/LoginDetailsSkeleton.scss
+++ b/src/Components/Common/LoginDetailsSkeleton/LoginDetailsSkeleton.scss
@@ -57,3 +57,13 @@
   line-height: 24px;
   width: 100%;
 }
+
+.deskWidth {
+  width: 20%;
+}
+
+@media screen and (max-width: 600px) {
+  .deskWidth {
+    width: 25%;
+  }
+}
