--- a/src/Components/Common/VideoPlayer/VideoPlayer.scss
+++ b/src/Components/Common/VideoPlayer/VideoPlayer.scss
@@ -11,7 +11,11 @@
 }
 @media screen and (min-width: 800px) and (max-height: 1000px) {
   .plyrComponent__overall {
-    height: 90vh;
     margin: auto;
   }
+}
+
+.plyrComponent {
+  height: 80vh !important;
+  overflow: auto;
 }
