--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -1,7 +1,7 @@
 .Login {
   @import '../../scss/bootstrap';
 
-  margin-top: 125px;
+  margin-top: 60px;
 
   @include media-breakpoint-up(lg) {
     margin-top: 100px;
@@ -21,12 +21,13 @@
 
   &__footer {
     position: absolute;
-    bottom: 30px;
+    bottom: 10px;
     width: 100%;
     padding-bottom: 30px;
 
     @include media-breakpoint-down(md) {
       height: 40px;
+      bottom: 70px;
     }
     text-align: center;
   }
@@ -72,5 +73,15 @@
     color: $headingGrey;
     right: 0;
     bottom: 0;
+  }
+}
+
+.deskWidthFORM {
+  width: 65%;
+}
+
+@media screen and (max-width: 600px) {
+  .deskWidthFORM {
+    width: 95%;
   }
 }
