--- a/src/Components/Login/Preloader/Preloader.scss
+++ b/src/Components/Login/Preloader/Preloader.scss
@@ -1,7 +1,7 @@
 .Preloader {
   @import '../../../scss/bootstrap';
 
-  width: 25%;
+  width: 90%;
   @include media-breakpoint-down(md) {
     width: 75%;
   }
@@ -12,7 +12,7 @@
   }
 }
 .Login__jumbo {
-  width: 200px;
+  width: 108px;
   height: auto;
   border-radius: 10px;
   margin: 20px auto;
@@ -20,5 +20,15 @@
 @media screen and (min-width: 800px) {
   .Login {
     margin-top: 30px !important;
+  }
+}
+
+.deskWidth {
+  width: 20%;
+}
+
+@media screen and (max-width: 600px) {
+  .deskWidth {
+    width: 25%;
   }
 }
