--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -117,11 +117,16 @@
   height: 36px;
   padding-left: 20px;
   padding-right: 20px;
-  width: 95%;
+  width: 80%;
 }
-@media screen and (min-width: 575px) {
+@media screen and (max-width: 768px) {
   .btn-dashboardHWletsGo {
-    width: 52%;
+    width: 95%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .btn-dashboardHWletsGo {
+    width: 93%;
   }
 }
 
