--- a/src/Components/Login/DummyDashboard.scss
+++ b/src/Components/Login/DummyDashboard.scss
@@ -72,6 +72,9 @@
   width: 450px !important;
   height: auto !important;
 }
+.colorForBack {
+  background-color: var(--primary-blue);
+}
 @media screen and (max-width: 800px) {
   .testimonialVideoTag {
     width: 300px !important;
@@ -83,5 +86,17 @@
   .testimonialVideoTag {
     width: 220px !important;
     height: auto !important;
+  }
+}
+
+.Dashboard_image {
+  width: 92px;
+  padding-right: 20px;
+}
+
+@media screen and (max-width: 600px) {
+  .Dashboard_image {
+    padding-right: 0px;
+    width: 73px;
   }
 }
