bottom nav and search removed temporarily

--- a/src/Components/Common/GlobalSearchBar/GlobalSearchBar.scss
+++ b/src/Components/Common/GlobalSearchBar/GlobalSearchBar.scss
@@ -221,4 +221,8 @@
   .searchBarInputOnDashboard {
     font-size: 30px !important;
   }
+  .nameText {
+    font-size: 28px;
+    margin-left: 25px !important;
+  }
 }
