--- a/src/Components/Tests/Tests.scss
+++ b/src/Components/Tests/Tests.scss
@@ -132,11 +132,13 @@
     text-align: left;
   }
   .secContainer {
-    width: 95% !important;}
-.OnlineTestHeadingContainer {
-  width: 95%;
-  margin: auto;
-}}
+    width: 95% !important;
+  }
+  .OnlineTestHeadingContainer {
+    width: 95%;
+    margin: auto;
+  }
+}
 
 .Tests__scrollableCard {
   padding-left: 3% !important;
