--- a/src/Components/Tests/Tests.scss
+++ b/src/Components/Tests/Tests.scss
@@ -25,11 +25,7 @@
     color: black;
     display: 'flex';
     flex-direction: column;
-    padding-left: 20px;
-    width: 96%;
-    @include media-breakpoint-down(sm) {
-      width: 100%;
-    }
+    // padding-left: 20px;
   }
 
   &__viewAllButtonForCards {
@@ -109,7 +105,11 @@
   justify-content: center;
 }
 .noMatch {
-  margin: 10px 5px;
+  width: 100%;
+  height: 100%;
+  font-family: 'Montserrat-Medium';
+  margin: auto;
+  text-align: center;
 }
 .tab {
   overflow: auto;
@@ -144,10 +144,12 @@
   padding-left: 3% !important;
 }
 
+.OnlineTestHeadingContainer {
+  width: 93% !important;
+  margin: auto;
+}
+
 @media screen and (max-width: 600px) {
-  .OnlineTestHeadingContainer {
-    width: 100%;
-  }
   .Tests__scrollableCard {
     padding-left: 0px !important;
   }
