videos card completed

--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -194,6 +194,17 @@
   font-size: 14px;
 }
 
+.btn-uploadVideoButton {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000;
+  border-radius: 50px;
+  padding-top: 0;
+  padding-bottom: 0;
+  font-family: 'Montserrat-Regular';
+  font-size: 14px;
+}
+
 .btn-boldText {
   background-color: #fff;
   color: var(--primary-blue);
