--- a/src/Components/Videos/Videos.css
+++ b/src/Components/Videos/Videos.css
@@ -11,7 +11,7 @@
   z-index: 10;
   bottom: 0;
   width: 100%;
-  height: 86vh;
+  height: calc(100vh - 70px) !important;
   background-color: white;
   overflow-y: scroll;
   box-shadow: 0px -5px 6px 0px rgba(0, 0, 0, 0.16);
@@ -139,7 +139,7 @@
 }
 
 @media screen and (min-width: 1440px) {
-  .overlay {
-    height: 93vh;
-  }
+  /* .overlay {
+    height: calc(93vh - 60px) !important;
+  } */
 }
