--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -122,6 +122,7 @@
 @media screen and (max-width: 768px) {
   .btn-dashboardHWletsGo {
     width: 95%;
+    height: 44px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -166,6 +167,13 @@
   height: 36px;
 }
 
+@media screen and (min-width: 1440px) {
+  .btn-noticeBoardPost {
+    height: 48px;
+    font-size: 22px;
+  }
+}
+
 .btn-dynamicOutline {
   border-radius: 5px;
   border: 1px solid var(--primary-blue);
@@ -192,6 +200,11 @@
   padding-bottom: 0;
   font-family: 'Montserrat-Regular';
   font-size: 14px;
+}
+@media screen and (min-width: 1440px) {
+  .btn-liveClasses {
+    font-size: 20px !important;
+  }
 }
 
 .btn-uploadVideoButton {
