--- a/src/Components/Login/DummyDashboard.scss
+++ b/src/Components/Login/DummyDashboard.scss
@@ -130,11 +130,41 @@
 /// For very large screens ///
 @media screen and (min-width: 1440px) {
   .Dummy__coachingName {
-    font-size: 84px !important;
+    font-size: 74px !important;
     font-family: 'Montserrat-Bold';
   }
   .Dummy__tagline {
-    font-size: 54px;
+    font-size: 44px;
     margin-top: 75px;
+    margin-bottom: 100px !important;
+  }
+  .Dummy__socialLinks {
+    width: 50px;
+    height: 50px;
+  }
+  .Dummy__aboutus {
+    font-size: 28px;
+  }
+  .Dummy__aboutData {
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .Dummy__joinDetails,
+  .Dummy__connect {
+    font-size: 18px !important;
+  }
+  .Dummy__joinSmall {
+    margin-top: 15px !important;
+    font-size: 16px !important;
+  }
+  .Dummy__joinUs {
+    font-size: 28px !important;
+    margin-bottom: 45px !important;
+  }
+  .Dummy__contactDetails {
+    font-size: 19px;
+  }
+  .Dummy__contactSmall {
+    font-size: 16px;
   }
 }
