--- a/src/Components/Tests/Tests.scss
+++ b/src/Components/Tests/Tests.scss
@@ -154,3 +154,30 @@
     padding-left: 0px !important;
   }
 }
+
+@media screen and (min-width: 1440px) {
+  .Tests__initialHeading {
+    font-size: 28px;
+  }
+  .Tests__smallTextUnderHeading {
+    font-size: 18px;
+  }
+  .Tests__scrollableCardHeading span {
+    font-size: 19px;
+  }
+  .Tests__scrollableCardHeading {
+    font-size: 19px;
+  }
+  .Tests__Counter {
+    font-size: 19px;
+  }
+  .Tests__scrollableCardText {
+    font-size: 16px;
+  }
+  .Tests__scrollableCard > div {
+    min-width: 400px;
+  }
+  .Tests__viewAllButtonForCards {
+    font-size: 16px;
+  }
+}
