--- a/src/Components/Live Classes/LiveClasses.scss
+++ b/src/Components/Live Classes/LiveClasses.scss
@@ -319,3 +319,9 @@
     width: 95%;
   }
 }
+
+@media screen and (min-width: 890px) {
+  .moreVertiIconSAVED {
+    padding-left: 125px !important;
+  }
+}
