invalid url added plus fees apis corrected

--- a/src/Components/Common/LoginDetailsSkeleton/LoginDetailsSkeleton.scss
+++ b/src/Components/Common/LoginDetailsSkeleton/LoginDetailsSkeleton.scss
@@ -62,6 +62,11 @@
   width: 20%;
 }
 
+.loginComponentsContainer {
+  position: relative;
+  min-height: 100%;
+}
+
 @media screen and (max-width: 600px) {
   .deskWidth {
     width: 25%;
