--- a/src/Components/OfflineAssignments/OfflineAssignments.scss
+++ b/src/Components/OfflineAssignments/OfflineAssignments.scss
@@ -1,6 +1,6 @@
-// * {
-//   font-family: 'Montserrat-Regular';
-// }
+* {
+  font-family: 'Montserrat-Regular';
+}
 .OFAForm {
   @import '../../scss/bootstrap';
 
@@ -150,6 +150,7 @@
 .OFAFormContainer {
   width: 85%;
   border-radius: 10px;
+  padding: 2px 10px;
   margin-top: 70px;
   height: fit-content;
   box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.3);
@@ -452,7 +453,6 @@
 
 .SubjectMarksContainer {
   display: flex !important;
-  margin: auto;
   width: 95%;
   /* margin-right: 3%; */
   justify-content: space-between;
@@ -460,6 +460,17 @@
 
 .marksForm {
   width: 95%;
+}
+
+.validationErrorOFAForm {
+  color: red;
+  font-size: 10px;
+  font-family: 'Montserrat-Regular';
+  margin-bottom: 0px;
+}
+
+.marginOnDesk {
+  margin-top: -28px;
 }
 
 @media screen and (min-width: 600px) {
@@ -480,12 +491,18 @@
     padding-left: 0px !important;
     padding-right: 0px !important;
   }
+  .SubjectMarksContainer {
+    margin: auto !important;
+  }
 }
 
 /* media quiery  */
 @media only screen and (max-width: 767px) {
   .sms-txt {
     width: 95%;
+  }
+  .marginOnDesk {
+    margin-top: 0px;
   }
   .icon {
     margin-right: 15px;
