--- a/src/scss/_buttonStyles.scss
+++ b/src/scss/_buttonStyles.scss
@@ -162,6 +162,7 @@
   border: 0.1px solid #707070;
   padding-right: 20px;
   padding-left: 20px;
+  min-width: 145px;
   font-family: 'Montserrat-SemiBold';
   font-size: 14px;
   height: 36px;
