--- a/src/Components/Common/Stories/AppStories.scss
+++ b/src/Components/Common/Stories/AppStories.scss
@@ -1,3 +1,16 @@
+.addStatusBackdrop {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .NextAndPrevArrows {
   position: fixed;
   z-index: 1550;
@@ -30,7 +43,7 @@
 }
 
 .modalDivStories {
-  height: 95vh;
+  height: calc(100vh - 87px);
   padding: 0px !important;
   width: 70vw;
 }
@@ -146,6 +159,10 @@
   border: 2px solid var(--primary-blue);
 }
 
+.grayStatusCircle {
+  border: 2px solid gray !important;
+}
+
 .scrollableStatuses {
   display: flex;
   flex-direction: row;
@@ -198,15 +215,21 @@
   outline: none;
 }
 
+.plusMarkContainer {
+  display: flex;
+  width: 50px;
+  margin: auto;
+  flex-direction: row-reverse;
+}
+
 .plusMarkStories {
-  position: absolute;
-  z-index: 5;
-  top: 80px;
-  left: 45px;
+  position: relative;
+  margin-bottom: -15px !important;
   margin: 0px;
   background-color: var(--primary-blue);
   border-radius: 100px;
   width: 18px;
+  top: -15px;
   height: 18px;
   color: whitesmoke;
   padding-bottom: 2px;
@@ -215,9 +238,64 @@
   justify-content: center;
 }
 
+.statusViewFooter {
+  background-color: rgb(17, 17, 17);
+  border-top: transparent;
+  color: white;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modalDivStories > div > div > div {
+  width: 100%;
+}
+
+.caption {
+  color: white;
+  position: relative;
+  bottom: 15vh;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 5px;
+  font-family: 'Montserrat-Medium';
+}
+
+.views {
+  color: white;
+  position: relative;
+  width: max-content;
+  // bottom: 15vh;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 5px;
+  font-family: 'Montserrat-Medium';
+}
+
+.cropContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: black;
+  margin: 0px;
+}
+
+.modalText {
+  font-family: 'Montserrat-Medium';
+  margin: 0px;
+}
+
+.deleteModalImage {
+  width: 300px;
+  height: auto;
+  max-height: 80vh;
+}
+
 @media screen and (max-width: 600px) {
   .modalDivStories {
-    width: 95vw;
+    width: 100vw;
   }
   .filesModal > div > div {
     width: 100vw;
